firefam-rs/tui/src/bottom_pane/snapshots/firefam_tui__bottom_pane__chat_composer__tests__slash_popup_skill_match.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"▌ $Firefam Debugger  Debug this Firefam checkout  [Skill]               "
"────────────────────────────────────────────────────────────────────────"
"› /fir                                                                  "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"────────────────────────────────────────────────────────────────────────"
"  ↑/↓ Navigate · enter Select · tab Complete · esc to cancel            "
